2018-06-18  Mark Wielaard  <mark@klomp.org>

	* dwarf_peel_type.c (dwarf_peel_type): Limit modifier chain to 64.

2018-06-18  Mark Wielaard  <mark@klomp.org>

	* dwarf_aggregate_size.c (aggregate_size): Check die is not NULL.

2018-06-17  Luiz Angelo Daros de Luca  <luizluca@gmail.com>

	* dwarf_getsrclines.c (read_srclines): Intialize filelist early.

2018-06-15  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (check_constant_offset): Clarify DW_FORM_data16
	isn't really a constant.
	(dwarf_getlocation): Don't handle DW_FORM_data16 as block.
	(dwarf_getlocation_addr): Likewise.
	(dwarf_getlocations): Likewise.

2018-06-12  Mark Wielaard  <mark@klomp.org>

	* memory-access.h (read_3ubyte_unaligned_inc): New define.

2018-06-12  Mark Wielaard  <mark@klomp.org>

	* libdw.h (__libdw_dieabbrev): Set die->abbrev to DWARF_END_ABBREV
	on failure.

2018-06-10  Mark Wielaard  <mark@klomp.org>

	* dwarf_attr_integrate.c (dwarf_attr_integrate): Stop after 16 DIE
	ref chains.
	* dwarf_hasattr_integrate.c (dwarf_hasattr_integrate): Likewise.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_getabbrev.c (dwarf_getabbrev): Check die and offset.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_get_units.c (dwarf_get_units): Handle existing error, no
	dwarf.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (store_implicit_value): Return error when
	seeing bad DWARF or when tsearch runs out of memory.
	(__libdw_intern_expression): Report error when store_implicit_value
	reported an error.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_getsrclines.c (read_srclines): Sanity check ndirs and nfiles.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation_attr.c (addr_valp): Set error and return NULL
	when there is no .debug_addr section.
	(dwarf_getlocation_attr): If addr_valp returns NULL, then return -1.

2018-06-07  Mark Wielaard  <mark@klomp.org>

	* libdw_findcu.c (__libdw_intern_next_unit): Report DWARF_E_VERSION,